# opsguide_portal

./: .gitignore  AUTHORS  ChangeLog  requirements.txt  setup.cfg  setup.py
etc/: bootstrap_config.json  portal.conf
portal/: config.py  exceptions.py  service.py
portal/auth/: __init__.py  core.py
portal/cmd/: all.py
portal/common/: utils.py
portal/login/: core.py
portal/portal/: core.py
portal/protobuf/: proxy.py
portal/server/: core.py
portal/static/css/: bootstrap-theme.min.css  bootstrap.min.css
portal/static/js/: bootstrap.min.js
portal/templates/: 404.html  500.html  agentsinfo.html  agentsinfo_applications.html  appsinfo.html  appsinfo_versions.html  base.html  cfg_content.html  cfgs.html  login.html  pubmgr.html  services.html  services_detail.html
portal/www/: core.py
protobuf/: ogp_msg.proto
