[metadata]
name = portal
version = 0.0.1
summary = portal for ogp
description-file =
    README.md
author = tianhuan
author-email = tianhuan@bingotree.cn
home-page = http://bingotree.cn
classifier =
    Environment :: PORTAL
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5

[files]
packages =
    portal

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[entry_points]
console_scripts =
    portal = portal.cmd.all:main
